istio/disable-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-mtls
  namespace: istio-system
spec:
  mtls:
    mode: DISABLE # Отключаем шифрование трафика на прокси
