istio/3-myapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: second-app
  name: second-app
  namespace: production
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd
  type: ClusterIP
