istio/04-virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-virtual-services
  namespace: apps
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: tarantool
            subset: v1
            port:
              number: 80
          weight: 50
        - destination:
            host: tarantool
            subset: v2
            port:
              number: 80
          weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tarantool-ds
  namespace: apps
spec:
  host: tarantool
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
