istio/echoserver-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echoserver-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver-vs
spec:
  hosts:
    - "*"
  gateways:
    - echoserver-gateway
  http:
    - route:
        - destination:
            host: echoserver
            subset: v1
            port:
              number: 8000
          weight: 50
        - destination:
            host: echoserver
            subset: v2
            port:
              number: 8000
          weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echoserver
spec:
  host: echoserver
  subsets:
    - name: v1
      labels:
        version: v0.0.1
    - name: v2
      labels:
        version: v0.0.2
