istio/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 8888
        name: httpapp
        protocol: HTTP
      hosts:
        - "arch.homework"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-gateway
spec:
  hosts:
    - "arch.homework"
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            prefix: /version
        - uri:
            prefix: /health
      route:
        - destination:
            port:
              number: 8000
            host: app-v041.app.svc.cluster.local
          weight: 50
        - destination:
            port:
              number: 8000
            host: app-v042.app.svc.cluster.local
          weight: 50
