istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echoservice-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoservice
spec:
  hosts:
    - "*"
  gateways:
    - echoservice-gateway
  http:
    - name: "echoserver routes"
      route:
        - destination:
            port:
              number: 80
            host: echoserver.default.svc.cluster.local
            subset: v1
          weight: 50
        - destination:
            port:
              number: 80
            host: echoserver.default.svc.cluster.local
            subset: v2
          weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echoservice-destination
spec:
  host: echoserver.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: "v1"
    - name: v2
      labels:
        version: "v2"
