istio/rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver
spec:
  hosts:
  - "echoserver.local"
  gateways:
  - ingress-gateway
  http:
  - route:
    - destination:
        host: echoserver
        subset: v1
      weight: 50
    - destination:
        host: echoserver
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echoserver
spec:
  host: echoserver
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
