istio/service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver-vs
spec:
  hosts:
    - "*"
  gateways:
    - echoserver-gateway
  http:
    - route:
        - destination:
            host: echoserver
            subset: v1
          weight: 50
        - destination:
            host: echoserver
            subset: v2
          weight: 50
