istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            exact: /health
      route:
        - destination:
            host: service
            port:
              number: 31000
            subset: v1
          weight: 50
        - destination:
            host: service
            port:
              number: 31000
            subset: v2
          weight: 50
