istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver-virtual-service
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - echoserver-gateway
  http:
    - route:
        - destination:
            host: echoserver.default.svc.cluster.local
            subset: v1
          weight: 50
        - destination:
            host: echoserver.default.svc.cluster.local
            subset: v2
          weight: 50
